Fix for [PARQUET-918]

FromParquetSchema and ReadTable APIs crashed on nested schemas parquet on partial schema reads